concrete syntax prototype testing